fix: `style` translation

--- a/src/content/docs/de/guides/styling.mdx
+++ b/src/content/docs/de/guides/styling.mdx
@@ -1,5 +1,5 @@
 ---
-title: Stile & CSS
+title: Styles & CSS
 description: >-
   Lerne, wie du Komponenten in Astro mit Scoped Styles, externem CSS und
   Werkzeugen wie Sass und PostCSS gestaltest.
@@ -9,9 +9,9 @@ import Since from '~/components/Since.astro';
 
 
 
-Astro wurde entwickelt, um das Styling und Schreiben von CSS zu einem Kinderspiel zu machen. Schreibe dein eigenes CSS direkt in einer Astro-Komponente oder importiere deine Lieblings-CSS-Bibliothek wie [Tailwind][tailwind]. Fortgeschrittene Stil-Sprachen wie [Sass][sass] und [Less][less] werden ebenfalls unterstützt.
+Astro wurde entwickelt, um das Styling und Schreiben von CSS zu einem Kinderspiel zu machen. Schreibe dein eigenes CSS direkt in einer Astro-Komponente oder importiere deine Lieblings-CSS-Bibliothek wie [Tailwind][tailwind]. Fortgeschrittene Style-Sprachen wie [Sass][sass] und [Less][less] werden ebenfalls unterstützt.
 
-## Stile in Astro
+## Styles (Stile) in Astro
 
 Die Gestaltung einer Astro-Komponente ist so einfach wie das Hinzufügen eines `<style>`-Tags zu deiner Komponente oder Seitenvorlage. Wenn du einen `<style>`-Tag innerhalb einer Astro-Komponente platzierst, erkennt Astro das CSS und übernimmt die Formatierung automatisch für dich.
 
@@ -21,7 +21,7 @@ Die Gestaltung einer Astro-Komponente ist so einfach wie das Hinzufügen eines `
 </style>
 ```
 
-### Scoped Styles (auf Komponenten begrenzte CSS-Stile)
+### Scoped Styles (auf Komponenten begrenzte lokale CSS-Stile)
 
 Astro `<style>` CSS-Regeln sind standardmäßig automatisch **scoped**. Scoped Styles werden hinter den Kulissen kompiliert und gelten nur für HTML, das innerhalb der gleichen Komponente geschrieben wurde. Das CSS, das du innerhalb einer Astro-Komponente schreibst, wird automatisch innerhalb dieser Komponente gekapselt.
 
@@ -35,13 +35,13 @@ Astro `<style>` CSS-Regeln sind standardmäßig automatisch **scoped**. Scoped S
 </style>
 ```
 
-Stile mit Scopes wirken sich nicht ausserhalb der definierenden Komponente aus und haben keinen Effekt auf den Rest deiner Website. In Astro ist es in Ordnung, Selektoren mit geringer Spezifität wie `h1 {}` oder `p {}` zu verwenden, da sie in der endgültigen Ausgabe mit Scopes kompiliert werden.
+Styles mit Scopes wirken sich nicht ausserhalb der definierenden Komponente aus und haben keinen Effekt auf den Rest deiner Website. In Astro ist es in Ordnung, Selektoren mit geringer Spezifität wie `h1 {}` oder `p {}` zu verwenden, da sie in der endgültigen Ausgabe mit Scopes kompiliert werden.
 
-Scoped Stile gelten auch nicht für andere Astro-Komponenten, die in deiner Vorlage enthalten sind. Wenn du eine untergeordnete Komponente stylen musst, solltest du diese Komponente in ein `<div>` (oder ein anderes Element) einpacken, das du dann gestalten kannst.
+Scoped Styles gelten auch nicht für andere Astro-Komponenten, die in deiner Vorlage enthalten sind. Wenn du eine untergeordnete Komponente stylen musst, solltest du diese Komponente in ein `<div>` (oder ein anderes Element) einpacken, das du dann gestalten kannst.
 
-Die Spezifität von Scoped Styles wird beibehalten, sodass sie konsistent mit anderen CSS-Dateien oder CSS-Bibliotheken arbeiten können, während die exklusiven Grenzen erhalten bleiben, die verhindern, dass Stile außerhalb der Komponente angewendet werden.
+Die Spezifit von Scoped Styles wird beibehalten, sodass sie konsistent mit anderen CSS-Dateien oder CSS-Bibliotheken arbeiten können, während die exklusiven Grenzen erhalten bleiben, die verhindern, dass Styles außerhalb der Komponente angewendet werden.
 
-#### Globale Stile
+#### Globale Styles
 
 Obwohl wir für die meisten Komponenten Scoped Styles empfehlen, kann es vorkommen, dass du einen triftigen Grund hast, globales, unscoped CSS zu schreiben. Mit dem Attribut `<style is:global>` kannst du das automatische CSS-Scoping deaktivieren.
 
@@ -53,7 +53,7 @@ Obwohl wir für die meisten Komponenten Scoped Styles empfehlen, kann es vorkomm
 </style>
 ```
 
-Du kannst auch globale und scoped CSS-Regeln im selben `<style>`-Tag mischen, indem du den `:global()`-Selektor verwendest. Dies ist ein mächtiges Pattern, um CSS-Stile auf die Children deiner Komponente anzuwenden.
+Du kannst auch globale und scoped CSS-Regeln im selben `<style>`-Tag mischen, indem du den `:global()`-Selektor verwendest. Dies ist ein mächtiges Pattern, um CSS-Styles auf die Children deiner Komponente anzuwenden.
 
 ```astro title="src/components/MixedStyles.astro" ":global(h1)"
 <style>
@@ -70,7 +70,7 @@ Du kannst auch globale und scoped CSS-Regeln im selben `<style>`-Tag mischen, in
 
 Das ist eine gute Möglichkeit, um beispielsweise Blog-Posts oder Dokumente mit CMS-gestützten Inhalten zu gestalten, deren Inhalte außerhalb von Astro liegen. Aber Vorsicht: Komponenten, deren Aussehen davon abhängt, ob sie eine bestimmte übergeordnete Komponente haben oder nicht, können bei der Fehlersuche Probleme bereiten.
 
-Scoped Styles sollten so oft wie möglich genutzt werden. Globale Stile sollten nur bei Bedarf verwendet werden.
+Scoped Styles sollten so oft wie möglich genutzt werden. Globale Styles sollten nur bei Bedarf verwendet werden.
 
 ### Kombinieren von Klassen mit `class:list`
 
@@ -145,13 +145,13 @@ import MyComponent from "../components/MyComponent.astro"
 Mit diesem Pattern kannst du untergeordnete Komponenten direkt gestalten. Astro übergibt den Klassennamen der Elternkomponente (z.B. "astro-HHNQFKH6") automatisch über den Parameter "class" und schließt die Kindkomponente in den Geltungsbereich der Elternkomponente ein.
 
 :::note[Scoped Klassen von Eltern-Komponenten]
-Da die Eigenschaft `class` das Kind in den Geltungsbereich des Elternteils einbezieht, ist es möglich, dass Stile vom Elternteil auf das Kind übertragen werden. Um unbeabsichtigte Nebeneffekte zu vermeiden, solltest du sicherstellen, dass du eindeutige Klassennamen in der untergeordneten Komponente verwendest.
+Da die Eigenschaft `class` das Kind in den Geltungsbereich des Elternteils einbezieht, ist es möglich, dass Styles vom Elternteil auf das Kind übertragen werden. Um unbeabsichtigte Nebeneffekte zu vermeiden, solltest du sicherstellen, dass du eindeutige Klassennamen in der untergeordneten Komponente verwendest.
 :::
 
 
-## Externe Stile
+## Externe Styles
 
-Es gibt zwei Möglichkeiten, externe globale Stile aufzulösen: ein ESM-Import für Dateien, die sich in deinem Projekt-Quellcode befinden, und ein absoluter URL-Link für Dateien in deinem `public/`-Verzeichnis oder außerhalb deines Projekts.
+Es gibt zwei Möglichkeiten, externe globale Styles aufzulösen: ein ESM-Import für Dateien, die sich in deinem Projekt-Quellcode befinden, und ein absoluter URL-Link für Dateien in deinem `public/`-Verzeichnis oder außerhalb deines Projekts.
 
 📚 Lies mehr über die Verwendung von [statischen Assets](/de/guides/imports/), die sich in `public/` oder `src/` befinden.
 
@@ -172,7 +172,7 @@ import '../styles/utils.css';
 <html><!-- Deine Seite hier --></html>
 ```
 
-CSS `import` über ESM wird in jeder JavaScript-Datei unterstützt, auch in JSX-Komponenten wie React und Preact.  Dies kann nützlich sein, um granulare, komponentenbezogene Stile für deine React-Komponenten zu schreiben.
+CSS `import` über ESM wird in jeder JavaScript-Datei unterstützt, auch in JSX-Komponenten wie React und Preact.  Dies kann nützlich sein, um granulare, komponentenbezogene Styles für deine React-Komponenten zu schreiben.
 
 ### Importiere CSS aus einem npm-Paket
 
@@ -276,7 +276,7 @@ Astro-CSS-Regeln werden in der Reihenfolge ihres Erscheinens ausgewertet:
 
 ### Scoped Styles
 
-Die Verwendung von [Scoped Styles](#scoped-styles) erhöht nicht die _Spezifität_ deines CSS, aber sie stehen immer an letzter Stelle in der _Reihenfolge des Auftretens_. Sie haben daher Vorrang vor anderen Stilen mit der gleichen Spezifität. Wenn du zum Beispiel CSS importierst, das mit einem Scoped Style in Konflikt steht, gilt der Wert des Scoped Styles:
+Die Verwendung von [Scoped Styles](#scoped-styles) erhöht nicht die _Spezifität_ deines CSS, aber sie stehen immer an letzter Stelle in der _Reihenfolge des Auftretens_. Sie haben daher Vorrang vor anderen Styles mit der gleichen Spezifität. Wenn du zum Beispiel CSS importierst, das mit einem Scoped Style in Konflikt steht, gilt der Wert des Scoped Styles:
 
 ```css title="make-it-purple.css"
 h1 {
@@ -377,7 +377,7 @@ Ein gängiges Pattern in Astro ist der Import von globalem CSS innerhalb einer [
 :::
 
 ### Link-Tags
-Stile, die über [Link-Tags](#laden-eines-statischen-stylesheets-über-link-tags) geladen werden, werden in der Reihenfolge vor allen anderen Stilen in einer Astro-Datei ausgewertet. Daher haben diese Stile einen geringeren Vorrang als importierte Stylesheets und Scoped Styles:
+Styles, die über [Link-Tags](#laden-eines-statischen-stylesheets-über-link-tags) geladen werden, werden in der Reihenfolge vor allen anderen Styles in einer Astro-Datei ausgewertet. Daher haben diese Styles einen geringeren Vorrang als importierte Stylesheets und Scoped Styles:
 
 ```astro title="index.astro"
 ---
@@ -484,7 +484,7 @@ Svelte in Astro funktioniert auch genau wie erwartet: [Svelte Styling Docs][svel
 
 Alle Astro-Stylingmethoden sind für eine [Markdown-Layoutkomponente](/de/core-concepts/layouts/#markdown-layouts) verfügbar.
 
-Du kannst globale Stile auf deinen Markdown-Inhalt anwenden, indem du [`<style>`-Tags](#globale-stile) und [importierte Stylesheets](#externe-stile) in das Layout einfügst, das deinen Seiteninhalt umhüllt. Du kannst auch [CSS-Integrationen](#css-integrationen) einschließlich [Tailwind](/de/guides/integrations-guide/tailwind/) hinzufügen.
+Du kannst globale Styles auf deinen Markdown-Inhalt anwenden, indem du [`<style>`-Tags](#globale-styles) und [importierte Stylesheets](#externe-styles) in das Layout einfügst, das deinen Seiteninhalt umhüllt. Du kannst auch [CSS-Integrationen](#css-integrationen) einschließlich [Tailwind](/de/guides/integrations-guide/tailwind/) hinzufügen.
 
 Wenn du Tailwind verwendest, kann das [Typografie-Plugin] (https://tailwindcss.com/docs/typography-plugin) für das Styling von Markdown nützlich sein.
 
