Add template command as well

--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -25,12 +25,12 @@ Bun has support for `npx` packages, which means you can create a new Astro proje
 bunx create-astro@latest my-astro-project-using-bun
 ```
 
-{/* :::tip[Tip]
+:::tip[Tip]
 If you want to use a theme, that will work as well!
 ```bash
-bunx create-astro@latest --template @eliancodes/brutal my-astro-project-using-bun 
+bunx create-astro@latest my-astro-project-using-bun --template eliancodes/brutal
 ```
-::: */}
+:::
 
 ## Install your dependencies
 
