Add note that Bun with Astro is experimental

--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -7,6 +7,8 @@ i18nReady: false
 
 [Bun](<https://bun.sh/>) is a newer runtime for JavaScript built for speed. See [Bun's documentation](<https://bun.sh/docs>) for more information.
 
+Using Bun with Astro still is experimental, not all integrations might work as expected. If you find any issues, please open an issue!
+
 ## Installing Bun
 
 installing Bun is a breeze - just run one simple command in your terminal and you're ready to go! Plus, with support for `npx packages, creating a new Astro project with Bun is as easy as pie.
@@ -61,6 +63,11 @@ bunx astro add react
 ```
 
 This will work exactly the same as if you were using NPM, but with the added benefit of using Bun's blazing fast runtime.
+
+:::note[Note]
+1. Some integrations might not work as expected. If you find any issues, please open an issue!
+2. Keep in mind that using `bun add` will not work, as that will add the package to Bun's dependencies and not your Astro project.
+:::
 
 ## Building your site with Bun
 
