feat: translate `images.mdx`

--- a/src/content/docs/de/guides/images.mdx
+++ b/src/content/docs/de/guides/images.mdx
@@ -9,9 +9,9 @@ import Since from '~/components/Since.astro';
 Astro bietet dir verschiedene Möglichkeiten, Bilder auf deiner Website zu verwenden, ganz gleich, ob sie lokal in deinem Projekt gespeichert sind, auf anderen Quellen verlinkt werden oder in einem CMS oder CDN gespeichert sind!
 
 :::note[Assets verwenden (Experimentell)]
-Die experimentelle Asset-Unterstützung wurde in `astro@2.1.0` hinzugefügt. Wenn du die Unterstützung für Assets aktiviert hast, findest du weitere Informationen im [Assets (Experimental) Guide](/de/guides/assets/).
+Die experimentelle Asset-Unterstützung wurde in `astro@2.1.0` hinzugefügt. Wenn du die Unterstützung für Assets aktiviert hast, findest du weitere Informationen in der [Asset-Anleitung (Experimentell)](/de/guides/assets/).
 
-**Einige der folgenden Ratschläge sind nicht mit dem experimentellen Flag kompatibel**
+**Einige der folgenden Ratschläge sind nicht mit der experimentellen Flag kompatibel.**
 :::
 
 ### In `.astro`-Dateien
@@ -24,7 +24,7 @@ Das Attribut `src` ist erforderlich und sein Format hängt davon ab, wo deine Bi
 ---
 import rocket from '../images/rocket.svg';
 ---
-<!-- Entferntes Bild auf einem anderen Server -->
+<!-- Remote-Bild auf einem anderen Server -->
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro">
 
 <!-- Lokales Bild gespeichert unter public/assets/stars.png -->
@@ -36,7 +36,7 @@ import rocket from '../images/rocket.svg';
 
 ### In Markdown-Dateien
 
-Du kannst die Standard Markdown `![]()` Syntax oder die Standard HTML `<img>`-Tags in deinen `.md` Dateien für Bilder verwenden, die sich in deinem `public/` Ordner befinden, oder für entfernte Bilder auf einem anderen Server.
+Du kannst die Standard Markdown `![]()` Syntax oder die Standard HTML `<img>`-Tags in deinen `.md`-Dateien für Bilder verwenden, die sich in deinem `public/`-Ordner befinden, oder für Remote-Bilder auf einem anderen Server.
 
 Wenn du deine Bilder nicht in `public/` speichern kannst, empfehlen wir, die [experimentelle Unterstützung für Assets](/de/guides/assets/) zu aktivieren oder das Dateiformat `.mdx` zu verwenden, mit dem du importierte Komponenten mit einer Markdown-ähnlichen Syntax kombinieren kannst. Verwende die [MDX-Integration](/de/guides/integrations-guide/mdx/), um Astro-Unterstützung für MDX hinzuzufügen.
 
@@ -49,14 +49,14 @@ Wenn du deine Bilder nicht in `public/` speichern kannst, empfehlen wir, die [ex
 ![Ein sternenklarer Nachthimmel.](/assets/stars.png)
 <img src="/assets/stars.png" alt="Ein sternenklarer Nachthimmel.">
 
-<!-- Entferntes Bild auf einem anderen Server -->
+<!-- Remote-Bild auf einem anderen Server -->
 ![Astro](https://astro.build/assets/logo.png)
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro">
 ```
 
 ### In MDX-Dateien
 
-Du kannst die Standard-Markdown-Syntak `![]()` oder JSX `<img />`- Tags in deinen `.mdx` Dateien verwenden, um Bilder aus deinem `public/` Ordner oder von entfernten Servern anzuzeigen.
+Du kannst die Standard-Markdown-Syntax `![]()` oder JSX `<img />`-Tags in deinen `.mdx`-Dateien verwenden, um Bilder aus deinem `public/`-Ordner oder von Remot-Servern anzuzeigen.
 
 Außerdem kannst du Bilder importieren und verwenden, die sich im Verzeichnis `src/` deines Projekts befinden, wie bei Astro-Komponenten.
 
@@ -73,7 +73,7 @@ import rocket from '../images/rocket.svg';
 ![Ein sternenklarer Nachthimmel.](/assets/stars.png)
 <img src="/assets/stars.png" alt="Ein sternenklarer Nachthimmel." />
 
-// Entferntes Bild auf einem anderen Server
+// Remote-Bild auf einem anderen Server
 ![Astro](https://astro.build/assets/logo.png)
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro" />
 ```
@@ -88,7 +88,7 @@ Wenn du Bilder in einer [UI-Framework-Komponente](/de/core-concepts/framework-co
 
 Deine in `src/` gespeicherten Bilder können von Komponenten (`.astro`, `.mdx` und anderen UI-Frameworks) verwendet werden, aber nicht in Markdown-Dateien.
 
-Wir empfehlen, dass du deine Bilder in [`public/`](#public) aufbewahrst oder sie [remote](#using-images-from-a-cms-or-cdn) speicherst, wenn du Markdown-Dateien verwenden musst.
+Wir empfehlen, dass du deine Bilder in [`public/`](#public) aufbewahrst oder sie [remote](#bilder-von-einem-cms-oder-cdn-verwenden) speicherst, wenn du Markdown-Dateien verwenden musst.
 
 Importiere sie aus einem **relativen Dateipfad** oder [import alias](/de/guides/aliases/) in eine beliebige Komponentendatei und verwende dann den Import als `src`-Attribut des Bildes.
 
@@ -125,9 +125,9 @@ In der Anleitung [Assets (Experimentell)](/de/guides/assets/) kannst du nachlese
 
 Dazu musst du deine bestehenden Bilder aktualisieren, die aktuelle Astro-Bildintegration entfernen und zusätzliche manuelle Änderungen vornehmen, um einige der neuen Funktionen zu nutzen.
 
-## Astro's Bilder-Integration
+## Astro's Bild-Integration
 
-Die offizielle Bildintegration von Astro bietet zwei verschiedene Astro-Komponenten für das Rendering optimierter Bilder, `<Image />` und `<Picture />`. Sie wird für alle statischen Seiten und für [einige Server-seitige Rendering-Implementierungshosts](/de/guides/integrations-guide/image/#installation) unterstützt.
+Die offizielle Bild-Integration von Astro bietet zwei verschiedene Astro-Komponenten für die Darstellung optimierter Bilder, `<Image />` und `<Picture />`. Sie wird für alle statischen Seiten und für [einige Server-seitige Rendering-Implementierungshosts](/de/guides/integrations-guide/image/#installation) unterstützt.
 
 Nach der [Installation von `@astrojs/image`](/de/guides/integrations-guide/image/#installation) kannst du diese beiden Komponenten überall dort verwenden, wo du Astro-Komponenten verwenden kannst: in `.astro`- und `.mdx`-Dateien.
 
@@ -149,9 +149,9 @@ Für responsive Bilder oder Art Direction verwendest du stattdessen die Komponen
 
 Übergib dem Attribut `src` der Komponente `<Image />` eine vollständige URL und gib einen Wert für `alt` an.
 
-Die Komponente `<Image />` kann das ursprüngliche Dateiformat eines entfernten Bildes nicht bestimmen, daher musst du ein Ausgabeformat (z. B. png, avif) angeben, um dein entferntes Bild umzuwandeln.
+Die Komponente `<Image />` kann das ursprüngliche Dateiformat eines Remote-Bildes nicht bestimmen, daher musst du ein Ausgabeformat (z. B. png, avif) angeben, um dein Remote-Bild umzuwandeln.
 
-Du musst außerdem entweder [`width`](/de/guides/integrations-guide/image/#Breite) und [`height`](/de/guides/integrations-guide/image/#Höhe) oder eine der Dimensionen plus ein [`aspectRatio`](/de/guides/integrations-guide/image/#Seitenverhältnis) angeben, um zu vermeiden, dass sich das Layout des Inhalts verschiebt, weil die `<Image />`-Komponente die Dimensionen eines entfernten Bildes nicht kennt.
+Du musst außerdem entweder [`width`](/de/guides/integrations-guide/image/#width) und [`height`](/de/guides/integrations-guide/image/#height) oder eine der Dimensionen plus ein [`aspectRatio`](/de/guides/integrations-guide/image/#aspectratio) angeben, um zu vermeiden, dass sich das Layout des Inhalts verschiebt, weil die `<Image />`-Komponente die Dimensionen eines Remote-Bildes nicht kennt.
 
 [Alle anderen Eigenschaften](/de/guides/integrations-guide/image/#image-) sind optional.
 
@@ -169,7 +169,7 @@ Importiere dein Bild in Frontmatter und übergib es direkt an das Attribut `src`
 
 Übergib dem Attribut `src` der Komponente einen Pfad relativ zum öffentlichen Ordner und gib einen Wert für `alt` an.
 
-Es wird wie ein entferntes Bild behandelt, für das entweder die beiden Attribute [`width`](/de/guides/integrations-guide/image/#Breite) und [`height`](/de/guides/integrations-guide/image/#Höhe) oder eine Dimension und ein [`aspectRatio`](/de/guides/integrations-guide/image/#aspectratio) erforderlich sind.
+Es wird wie ein Remote-Bild behandelt, für das entweder die beiden Attribute [`width`](/de/guides/integrations-guide/image/#width) und [`height`](/de/guides/integrations-guide/image/#height) oder eine Dimension und ein [`aspectRatio`](/de/guides/integrations-guide/image/#aspectratio) erforderlich sind.
 
 Ein Wert für das Attribut `Format` (z.B. png, avif) zur Umwandlung deines Bildes ist erforderlich.
 
@@ -231,37 +231,37 @@ Im MDN-Leitfaden findest du weitere Informationen über [responsive Bilder und A
 
 Übergib eine vollständige URL an das Attribut `<Picture />` der Komponente `src`.
 
-Ein Wert für `aspectRatio` wird auch benötigt, um sicherzustellen, dass die korrekte Höhe für entfernte Bilder zur Erstellungszeit berechnet werden kann.
+Ein Wert für `aspectRatio` wird auch benötigt, um sicherzustellen, dass die korrekte Höhe für Remote-Bilder zur Erstellungszeit berechnet werden kann.
 
-You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional.
+Du musst der Komponente mindestens die Werte für Bildbreiten und Bildschirmgrößen geben, aber [alle anderen Eigenschaften](/de/guides/integrations-guide/image/#picture-) sind optional.
 
-Although [`formats`](/en/guides/integrations-guide/image/#formats) is not required, the original image format of remote images is unknown and will not be included by default. If not provided, only `webp` and `avif` will be included.
+Obwohl [`formats`](/de/guides/integrations-guide/image/#formats) nicht erforderlich ist, ist das ursprüngliche Bildformat von Remote-Bildern unbekannt und wird standardmäßig nicht berücksichtigt. Wenn es nicht angegeben wird, werden nur `webp` und `avif` einbezogen.
 
-#### Local Images
+#### Lokale Bilder
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1))
+(erforderliche Attribute: [`src`](/de/guides/integrations-guide/image/#src-1), [`widths`](/de/guides/integrations-guide/image/#widths), [`sizes`](/de/guides/integrations-guide/image/#sizes), [`alt`](/de/guides/integrations-guide/image/#alt-1))
 
-Import your image in frontmatter and pass it directly to the `<Picture />` component's `src` attribute.
+Importiere dein Bild in Frontmatter und übergib es direkt an das Attribut `<src>` der Komponente `<Picture />`.
 
-You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional.
+Du musst der Komponente mindestens die Werte für Bildbreiten und Bildschirmgrößen geben, aber [alle anderen Eigenschaften](/de/guides/integrations-guide/image/#picture-) sind optional.
 
-By default, the `<Picture />` component's [`formats`](/en/guides/integrations-guide/image/#formats) will include `avif` and `webp` in addition to the image's original format if not specified.
+Standardmäßig enthalten die [`formats`](/de/guides/integrations-guide/image/#formats) der Komponente `<Picture />` zusätzlich zum Originalformat des Bildes die Formate `avif` und `webp`, wenn sie nicht angegeben sind.
 
-#### Images in `public/`
+#### Bilder in `public/`
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1), and [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1))
+(erforderliche Attribute: [`src`](/de/guides/integrations-guide/image/#src-1), [`widths`](/de/guides/integrations-guide/image/#widths), [`sizes`](/de/guides/integrations-guide/image/#sizes), [`alt`](/de/guides/integrations-guide/image/#alt-1), und [`aspectRatio`](/de/guides/integrations-guide/image/#aspectratio-1))
 
-Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`.
+Übergib dem Attribut `src` der Komponente einen Pfad relativ zum öffentlichen Ordner und gib einen Wert für `alt` an.
 
-The image will be treated as a remote image, so a value for `aspectRatio` is also required to ensure the correct height can be calculated at build time.
+Das Bild wird als Remote-Bild behandelt, daher ist auch ein Wert für `aspectRatio` erforderlich, damit die korrekte Höhe zum Zeitpunkt der Erstellung berechnet werden kann.
 
-You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional.
+Du musst der Komponente mindestens die Werte für Bildbreiten und Bildschirmgrößen geben, aber [alle anderen Eigenschaften](/de/guides/integrations-guide/image/#picture-) sind optional.
 
-Although [`formats`](/en/guides/integrations-guide/image/#formats) is not required, the original image format of images in the `public/` folder is unknown and will not be included by default. If not provided, only `webp` and `avif` will be included.
+Obwohl [`formats`](/de/guides/integrations-guide/image/#formats) nicht erforderlich ist, ist das ursprüngliche Bildformat der Bilder im Ordner `public/` nicht bekannt und wird standardmäßig nicht einbezogen. Wenn keine Angabe gemacht wird, werden nur `webp` und `avif` einbezogen.
 
-Your original image will be copied unprocessed to the build folder, like all files located in `public/`, and Astro's image integration will also return optimized versions of the image.
+Dein Originalbild wird unbearbeitet in den Build-Ordner kopiert, wie alle Dateien, die sich in `public/` befinden, und Astros Bildintegration liefert auch optimierte Versionen des Bildes.
 
-#### Examples
+#### Beispiele
 
 ```astro
 ---
@@ -270,24 +270,24 @@ import localImage from '../assets/logo.png';
 const remoteImage = 'https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png';
 ---
 
-<!--Local image with multiple sizes and formats-->
-<Picture src={localImage} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" formats={['avif', 'jpeg', 'png', 'webp']} alt="The Astro logo" />
+<!--Lokales Bild mit mehreren Größen und Formaten-->
+<Picture src={localImage} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" formats={['avif', 'jpeg', 'png', 'webp']} alt="Das Astro-Logo" />
 
-<!--Remote image (aspect ratio is required)-->
-<Picture src={remoteImage} widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="The Google logo" />
+<!--Remote-Bild (Seitenverhältnis ist erforderlich)-->
+<Picture src={remoteImage} widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="Das Google-Logo" />
 
-<!--Images in /public work like remote images-->
-<Picture src="/logo.png" widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="The Google logo" />
+<!--Bilder in /public funktionieren wie Remote-Bilder-->
+<Picture src="/logo.png" widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="Das Google-Logo" />
 
-<!--Inlined imports are supported-->
-<Picture src={import("../assets/logo.png")} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="The Astro logo" />
+<!-Inline-Importe werden unterstützt-->
+<Picture src={import("../assets/logo.png")} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="Das Astro-Logo" />
 
 ```
 
 
-### Using in MDX
+### Verwendung in MDX
 
-In `.mdx` files, `<Image />` and `<Picture />` can receive your image `src` through imports and exports.
+In `.mdx` Dateien können `<Image />` und `<Picture />` dein Bild `src` durch Importe und Exporte erhalten.
 
 ```mdx
 // src/pages/index.mdx
@@ -297,16 +297,16 @@ import rocket from '../assets/rocket.png';
 export const galaxy = 'https://astro.build/assets/galaxy.jpg';
 
 <Image src={import('../assets/logo.png')} alt="Astro"/>
-<Image src={rocket} width={300} alt="Spaceship approaching the moon."/>
-<Picture src={rocket} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="A rocket blasting off." />
-<Picture src={galaxy} widths={[200, 400, 800]} aspectRatio={16/9} sizes="(max-width: 800px) 100vw, 800px" alt="Outer space." />
+<Image src={rocket} width={300} alt="Raumschiff im Anflug auf den Mond."/>
+<Picture src={rocket} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="Eine Rakete explodiert." />
+<Picture src={galaxy} widths={[200, 400, 800]} aspectRatio={16/9} sizes="(max-width: 800px) 100vw, 800px" alt="Der Weltraum." />
 ```
 
-### Setting Default Values
+### Einstellung der Standardwerte
 
-Currently, there is no way to specify default values for all `<Image />` and `<Picture />` components. Required attributes should be set on each individual component.
+Zurzeit gibt es keine Möglichkeit, Standardwerte für alle `<Image />`- und `<Picture />`-Komponenten festzulegen. Erforderliche Attribute sollten für jede einzelne Komponente festgelegt werden.
 
-As an alternative, you can wrap these components in another Astro component for reuse. For example, you could create a component for your blog post images:
+Alternativ kannst du diese Komponenten zur Wiederverwendung in eine andere Astro-Komponente verpacken. Du könntest zum Beispiel eine Komponente für deine Blogpost-Bilder erstellen:
 
 ```astro title="src/components/BlogPostImage.astro"
 ---
@@ -324,10 +324,10 @@ const {src, ...attrs} = Astro.props;
 </style>
 ```
 
-### Using `<img>` with the Image Integration
+### Verwendung von `<img>` mit der Bildintegration
 
-The official image integration will change image imports to return an object rather than a source string.
-The object has the following properties, derived from the imported file:
+Mit der offiziellen Bildintegration wird der Bildimport so geändert, dass er ein Objekt und nicht mehr eine Quell-Zeichenkette zurückgibt.
+Das Objekt hat die folgenden Eigenschaften, die aus der importierten Datei stammen:
 ```ts
 {
   src: string;
@@ -337,42 +337,42 @@ The object has the following properties, derived from the imported file:
 }
 ```
 
-If you have the image integration installed, refer to the `src` property of the object when using `<img>`.
+Wenn du die Bildintegration installiert hast, verweise auf die Eigenschaft `src` des Objekts, wenn du `<img>` verwendest.
 
 ```astro ".src"
 ---
 import rocket from '../images/rocket.svg';
 ---
-<img src={rocket.src} alt="A rocketship in space."/>
+<img src={rocket.src} alt="Ein Rakete im Weltraum."/>
 ```
 
-Alternatively, add `?url` to your imports to tell them to return a source string.
+Alternativ kannst du auch `?url` zu deinen Importen hinzufügen, damit sie eine Quell-Zeichenkette zurückgeben.
 
 ```astro "?url"
 ---
 import rocket from '../images/rocket.svg?url';
 ---
-<img src={rocket} alt="A rocketship in space."/>
+<img src={rocket} alt="Ein Rakete im Weltraum."/>
 ```
 
-## Using Images from a CMS or CDN
+## Bilder von einem CMS oder CDN verwenden
 
-Image CDNs work with Astro. Use an image's full URL as the `src` attribute in an `<img>` tag or Markdown notation.
+Bild-CDNs funktionieren problemlos mit Astro. Verwende die vollständige URL eines Bildes als `src`-Attribut in einem `<img>`-Tag oder in der Markdown-Schreibweise.
 
-Alternatively, if the CDN provides a Node.js SDK, you can use that in your project. For example, [Cloudinary’s SDK](https://cloudinary.com/documentation/node_integration) can generate the `<img>` tag with the appropriate `src` for you.
+Wenn das CDN ein Node.js-SDK bereitstellt, kannst du dieses in deinem Projekt verwenden. Das SDK von [Cloudinary](https://cloudinary.com/documentation/node_integration) kann zum Beispiel den Tag `<img>` mit dem entsprechenden `src` für dich erzeugen.
 
-To use [external images with the `<Image />`](#remote-images) and [`<Picture />`](#remote-images-1) components from Astro's image integration, you must specify the appropriate dimension and format values for working with remote images.
+Um [externe Bilder mit den Komponenten `<Image />`](#remote-bilder) und [`<Picture />`](#remote-bilder-1) von Astros Bildintegration zu verwenden, musst du die entsprechenden Dimensions- und Formatwerte für die Arbeit mit Remote-Bildern angeben.
 
 ## Alt Text
 
-Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images.
+Nicht alle Nutzerinnen und Nutzer können Bilder auf die gleiche Weise sehen, daher ist Barrierefreiheit bei der Verwendung von Bildern besonders wichtig. Verwende das Attribut `alt`, um einen [beschreibenden Alt-Text](https://www.w3.org/WAI/tutorials/images/) für Bilder anzugeben.
 
-This attribute is required for the image integration's `<Image />` and `<Picture />` components. These components will throw an error if no alt text is provided.
+Dieses Attribut ist für die Komponenten `<Image />` und `<Picture />` der Bildintegration erforderlich. Diese Komponenten geben einen Fehler aus, wenn kein Alt-Text angegeben wird.
 
-If the image is merely decorative (i.e. doesn’t contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
+Wenn das Bild nur dekorativ ist (d.h. nicht zum Verständnis der Seite beiträgt), setze `alt=""`, damit Screenreader wissen, dass sie das Bild ignorieren sollen.
 
 
 
-## Community Integrations
+## Community-Integrationen
 
-In addition to the official [`@astrojs/image`](/en/guides/integrations-guide/image/) integration, there are several third-party [community image integrations](https://astro.build/integrations?search=images) for optimizing and working with images in your Astro project.
+Neben der offiziellen [`@astrojs/image`](/de/guides/integrations-guide/image/) Integration gibt es mehrere [Community Bild-Integrationen](https://astro.build/integrations?search=images) von Drittanbietern, um Bilder in deinem Astro-Projekt zu optimieren und mit ihnen zu arbeiten.
