--- a/src/content/docs/zh-cn/reference/errors/no-client-entrypoint.mdx
+++ b/src/content/docs/zh-cn/reference/errors/no-client-entrypoint.mdx
@@ -8,7 +8,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **NoClientEntrypoint**: `COMPONENT_NAME` 组件包含了 `client:CLIENT_DIRECTIVE` 客户端指令，但是 `RENDERER_NAME` 渲染器没有提供客户端入口点。 (E03008)
+> **NoClientEntrypoint**: `COMPONENT_NAME` 组件包含了 `client:CLIENT_DIRECTIVE` 客户端指令，但是 `RENDERER_NAME` 渲染器没有提供客户端入口文件。 (E03008)
 
 
 ## 哪里出了问题？
