--- a/src/content/docs/zh-cn/reference/errors/no-client-entrypoint.mdx
+++ b/src/content/docs/zh-cn/reference/errors/no-client-entrypoint.mdx
@@ -12,7 +12,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 
 
 ## 哪里出了问题？
-Astro 尝试在客户端对组件进行激活，但是所使用的渲染器没有提供用于激活的客户端入口点。
+Astro 尝试在客户端对组件进行激活，但是所使用的渲染器没有提供用于激活的客户端入口文件。
 
 **请参阅：**
 -  [addRenderer 选项](/zh-cn/reference/integrations-reference/#addrenderer-选项)
