switch bun run preview to bun tun
Co-authored-by: Jarred Sumner <jarred@jarredsumner.com>

--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -82,7 +82,7 @@ This will output your site to the `dist/` directory, just like it would do with 
 Then, you can serve your site the `preview` command:
 
 ```bash
-bun run preview
+bun preview
 ```
 
 That's all there is to it!
